tests/lambda/lambda-body.ast.err
Error: Unexpected token in input while parsing expression, expected ), <expression>, if, lambda
   ╭─[tests/lambda/lambda-body.scm:4:6]
   │
 4 │     (define z x)
   ·      ───┬──  
   ·         ╰──── Unexpected token define
───╯
